airshift - fixing small bugs in cart career-det pro-det

--- a/Day- Ex5 - Airshift/css/style.css
+++ b/Day- Ex5 - Airshift/css/style.css
@@ -6941,7 +6941,8 @@ p {
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../assets/help/pexels-pavel-danilyuk-7190943.jpg); }
 
 .help-heading {
-  font-size: 1.3rem; }
+  font-size: 1.3rem;
+  font-family: "Roboto Slab", serif; }
   .help-heading--border {
     border-bottom: 1px solid #eee; }
 
@@ -7047,14 +7048,14 @@ p {
     height: 0.5rem; }
   .cart__progress-links {
     position: absolute;
-    top: -50%;
+    top: -90%;
     left: 0;
     width: 100%;
     z-index: 1; }
     .cart__progress-links a {
       background-color: white;
-      height: 1rem;
-      width: 1rem;
+      height: 1.5rem;
+      width: 1.5rem;
       border: 3px solid #e42127;
       border-radius: 50%; }
   .cart__progress-text {
@@ -7071,11 +7072,11 @@ p {
   background-color: #f9f9f9; }
 
 .shopping-list__close {
-  height: 2rem;
-  width: 2rem;
-  line-height: 2rem;
+  height: 1rem;
+  width: 1rem;
+  line-height: 1rem;
   vertical-align: middle;
-  font-size: 0.9rem;
+  font-size: 0.7rem;
   color: white;
   background-color: #4a4a4a;
   border-radius: 50%; }
@@ -7214,7 +7215,10 @@ p {
     .cart__progress-text {
       width: 98%;
       margin-left: 1%;
-      transform: scaleX(1); } }
+      transform: scaleX(1); }
+
+  .cta-cart .btn.btn-primary {
+    font-size: 0.9rem; } }
 @media (max-width: 576px) {
   .section-track-input .form-control {
     width: 75% !important; }
